--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="center_text">
-            <h2>Day's left until Gear 5 comes out</h2>
+            <h2>Days left until Gear 5 comes out</h2>
             <h4 id="end_date">6th August 2023</h4>
         </div>
 
