--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
     
     <script src="https://kit.fontawesome.com/0bc1bbe512.js" crossorigin="anonymous"></script>
+    <script defer src="/_vercel/insights/script.js"></script>
     <script src="app.js"></script>
 </body>
 
