--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <meta name="google-site-verification" content="y3hKUYUFUa4Wb6kE450Q6yE9L-StsGPBmgnMlqx3LN0" />
     <link rel="stylesheet" href="styles.css">
 </head>
 
