--- a/index.html
+++ b/index.html
@@ -27,41 +27,17 @@
         </div>
 
         <div class="center_text">
-            <h2>Days left until Gear 5 comes out</h2>
-            <h4 id="end_date">6th August 2023</h4>
+            <h2>GEAR 5 EPISODE IS OUT</h2>
+            <h4 id="end_date">Watch it on your preferred anime streaming platform</h4>
         </div>
 
-        <div class="col">
-            <div>
-                <input type="text" readonly value="0">
-                <br>
-                <label for="">Days</label>
-            </div>
-
-            <div>
-                <input type="text" readonly value="0">
-                <br>
-                <label for="">Hours</label>
-            </div>
-
-            <div>
-                <input type="text" readonly value="0">
-                <br>
-                <label for="">Minutes</label>
-            </div>
-
-            <div>
-                <input type="text" readonly value="0">
-                <br>
-                <label for="">Seconds</label>
-            </div>
-        </div>
+        
     </div>
 
     
     <script src="https://kit.fontawesome.com/0bc1bbe512.js" crossorigin="anonymous"></script>
     <script defer src="/_vercel/insights/script.js"></script>
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
 </body>
 
 </html>
